--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Header / Navigation -->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="#home" class="logo">
+            <a href="index.html" class="logo">
                 MOLD<span>3D</span>
             </a>
 
