--- a/products.html
+++ b/products.html
@@ -71,6 +71,14 @@
                 <p>Explora nuestro catálogo de soluciones en impresión 3D</p>
             </div>
 
+            <div class="category-filters" id="categoryFilters">
+                <!-- Filters loaded dynamically -->
+            </div>
+
+            <div class="subcategory-filters" id="subCategoryFilters" style="display: none;">
+                <!-- Subcategory filters loaded dynamically -->
+            </div>
+
             <div class="products-grid" id="productsGrid">
                 <!-- Products will be loaded dynamically -->
             </div>
@@ -117,7 +125,7 @@
 
     <!-- JavaScript -->
     <script src="js/app.js"></script>
-    <script src="js/products.js"></script>
+    <script src="js/products.js?v=2"></script>
     <script src="js/cart.js"></script>
 </body>
 
